  * Allow setting remote.foo.annex-tracking-branch to a branch name
    that contains "/", as long as it's not a remote tracking branch.
  * Added OsPath build flag, which speeds up git-annex's operations on files.
  * git-lfs: Added an optional apiurl parameter.
    (This needs version 1.2.5 of the haskell git-lfs library to be used.)

 -- Joey Hess <id@joeyh.name>  Mon, 20 Jan 2025 10:24:51 -0400

git-annex (10.20250115) upstream; urgency=medium

  * Improve handing of ssh connection problems during 
    remote annex.uuid discovery.
  * log: Support --key, as well as --branch and --unused.
  * Avoid verification error when addurl --verifiable is used
    with an url claimed by a special remote other than the web.
  * Fix installation on Android.
  * Allow enableremote of an existing webdav special remote that has
    read-only access.
  * git-remote-annex: Use enableremote rather than initremote.
  * Windows: Fix permission denied error when dropping files that
    have the readonly attribute set.
  * Added freezecontent-annex and thawcontent-annex hooks that 
    correspond to the git configs annex.freezecontent and
    annex.thawcontent.
  * Added secure-erase-annex hook that corresponds to the git config
    annex.secure-erase-command.
  * Added commitmessage-annex hook that corresponds to the git config
    annex.commitmessage-command.
  * Added http-headers-annex hook that corresponds to the git config
    annex.http-headers-command.
  * Added git configs annex.post-update-command and annex.pre-commit-command
    that correspond to the post-update-annex and pre-commit-annex hooks.
  * Added annex.pre-init-command git config and pre-init-annex hook
    that is run before git-annex repository initialization.
  * Linux standalone builds' bundled rsync updated to fix security holes.

 -- Joey Hess <id@joeyh.name>  Wed, 15 Jan 2025 11:39:12 -0400

git-annex (10.20250102) upstream; urgency=medium

  * Added config `url.<base>.annexInsteadOf` corresponding to git's